--- a/shoes.css
+++ b/shoes.css
@@ -1,14 +1,36 @@
-#title{
-    background-color: aquamarine;
+#topnav{
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    
 }
-#main{
-    background-image: url(https://miro.medium.com/max/612/1*nVumkYqlHDAQ6LdJQqf4gg.jpeg);
-    height: 100%;  
-    width: 100%;
+
+
+#title{
+    background-color: red;
+    font-size: 40px;
+    font-weight: bold;
+    align-content: center;
+    
+}
+#all-cards{
     display: flex;
     flex-wrap: wrap;
-    color: wheat;
+    
 }
+
+#main{
+    background-image: url(https://dynaimage.cdn.cnn.com/cnn/c_fill,g_auto,w_1200,h_675,ar_16:9/https%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F211220145332-nba-tease.jpg); 
+    background-size: cover;
+    height: 100%;  
+    width: 100%;
+    color: whitesmoke;
+}
+
 #cards{
     background-color: black;
     height: 250px;
@@ -20,6 +42,9 @@ img{
     height: 50px;
     width: 100px;
     padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 #name{
